      comments embedded in their whitespace, and their object number
      and generation may be split across multiple lines, which may not
      all be buffered (reported by SPROUT).

    - [RT #120450] Fix PDF::API2->open($filename)->stringify()
      (reported by SPROUT).

    - Fix an off-by-one error when calculating text width while
      charspace is non-zero.


2.031     2017-01-26

    - Fix use of cache files when reading streams: temp files will now
      be used any time a stream is larger than 16MB (by default).
      Formerly, due to a bug, they would only be created when a 4kB
      chunk of a stream increased to 16kB or more after being
      decompressed.

    - Numbers, booleans, and null values can now be read from object
      streams.

    - Update to [RT #113290]: Objects inside a large object stream are
      now read without loading the entire object stream into memory.

    - DEPRECATION: The low-level new_api methods have been deprecated
      in favor of calling new directly.  If your code uses
      new_api($api2, ...), replace it with new($api2->{'pdf'}, ...).

    - [RT #118352] Don't crash when adding an annotation to a page
      that has an existing annotations array stored as an indirect
      object (reported by Johan Vromans).

    - [RT #118717] Die with an informative error if a file can't be
      opened during open() or saveas() (reported by Johan Vromans).


2.030     2016-10-13

    - Fix a font naming issue introduced while satisfying
      Perl::Critic.


2.029     2016-10-10

    - [RT #113293] Files with cross-reference streams weren't
      correctly setting the max object number (report and
      troubleshooting by Marco Pessotto).

    - Handle TIFF images with strips that are wider than the image
      (report and patch by Jeffrey Ratcliffe).

    - [RT #98574] Increase test coverage of PDF::API2::Content (tests
      by Phil Perry).

    - A bunch of code cleanup and documentation updates by Paul
      Cochrane.
